# preparation

./: LICENSE  README.md
httpx/: README.md  example_httpx.py
product_flow/: README.md
py_test/: README.md  tests.py
pydantic/: README.md  example_env_valid_pydantic.py  requirements.txt
tg_api/: README.md  example_tg_api.py  requirements.txt
tg_bot/: Makefile  README.md  docker-compose.yml  pyproject.toml
tg_bot/app/: Dockerfile
tg_bot_poetry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tg_bot_poetry/app/: tg_bot.py
